     "E: dpkg was interrupted, you must manually run 'dpkg --configure -a'")
  * merged lp:~kiwinote/python-apt/merge-gdebi-changes, this port the
    DebPackage class fixes from gdebi into python-apt so that gdebi can
    use the class from python-apt directly
  * apt/debfile.py:
    - check if the debfiles provides are in conflict with the systems
      packages

  [ Martin Pitt ]
  * tests/test_apt_cache.py: Test accessing the record of all packages during
    iteration. This both ensures that it's well-formatted and structured, and
    also that accessing it does not take an inordinate amount of time. This
    exposes a severe performance problem when using gzip compressed package
    indexes.
  * apt/cache.py: When iterating over the cache, do so sorted by package name.
    With this we read the the package lists linearly if we need to access the
    package records, instead of having to do thousands of random seeks; the
    latter is disastrous if we use compressed package indexes, and slower than
    necessary for uncompressed indexes.

 -- Michael Vogt <mvo@debian.org>  Tue, 01 Jun 2010 16:20:00 +0200

python-apt (0.7.95) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt/cache.py:
    - Make Cache.get_changes() much (~35x) faster (Closes: #578074).
    - Make Cache.req_reinstall_pkgs much faster as well.
    - Make Cache.get_providing_packages() about 1000 times faster.
    - Use has_versions and has_provides from apt_pkg.Package where possible.
  * apt/package.py:
    - Decode using utf-8 in installed_files (LP: #407953).
    - Fix fetch_source() to work when source name = binary name (LP: #552400).
    - Merge a patch from Sebastian Heinlein to make get_changelog() only
      check sources where source version >= binary version (Closes: #581831).
    - Add Version.source_version and enhance Sebastian's patch to make use
      of it, in order to find the best changelog for the package.
  * python: